# aMazeControlPlane

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.agent.incremental  Dockerfile.incremental  Dockerfile.ui  LICENSE  NETWORKING.md  Progress.md  README.md  SPRINTS.md  TODO.md  requirements-dev.txt  requirements.txt  run_demo_integration.sh  run_sprint1.sh  run_sprint2.sh  run_sprint3.sh  run_sprint4.sh  run_sprint5.sh  run_sprint6.sh  run_sprint7.sh  run_sprint8a.sh  run_sprint8b.sh  run_sprint9.sh
agents/: run_demo.py
config/: mcp_servers.yaml  policies.yaml  policies.yaml.back
docker/: Dockerfile  Dockerfile.a2a-proxy  Dockerfile.agent  Dockerfile.agent-base  Dockerfile.agent.incremental  Dockerfile.incremental  Dockerfile.mcp  Dockerfile.mcp-base  Dockerfile.nemo  Dockerfile.orchestrator  Dockerfile.partner-agent  Dockerfile.policy-processor  Dockerfile.sdk-agent  Dockerfile.ui  agent.py  compose-agent-host.yml  compose-mcp-host.yml  compose.networks.yml  container_spawn.py  docker-compose.nemo.yml  docker-compose.yml  entrypoint.sh  mcp_entrypoint.py  nemo_agent.py  nemo_mcp.py  supervisord.conf
docs/: HOWTO-remote-agents.md  index.html  remote-routing-architecture.md
envoy/: envoy.nemo.yaml  envoy.yaml
examples/: compose.yml  remote-compose-example-agents.yml  remote-compose-example_mcp.yml
go_processor/: go.mod  go.sum
orchestrator/: go.mod  main.go
policy_processor/: a2a_enforcer.py  limits.py  mcp_enforcer.py  processor.py  (+2 more)
sdk/: pyproject.toml
sdk/amaze/: __init__.py  _a2a.py  _core.py  _handlers.py
(+199 files in other folders)
