[project]
name = "amaze"
version = "0.9.0"
description = "aMaze Control Plane — minimal Python Agent SDK (Sprint 9)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.35.0",
  "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["amaze"]
